/**
 * Apple Strings File
 * Generated by Twine 0.9.0
 * Language: en
 */

/********** About **********/

"about_copyright" = "© 2005-%zd TIBCO Software, Inc.";

"about_comminity_title" = "Jaspersoft Community";

"about_whats_new_title" = "What's New";

"about_privacy_policy_title" = "Privacy Policy";

"about_eula_title" = "End user license agreement";


/********** Action titles **********/

"action_title_refresh" = "Refresh";

"action_title_save" = "Save";

"action_title_edit" = "Edit Values";

"action_title_edit_filters" = "Filters";

"action_title_delete" = "Delete";

"action_title_rename" = "Rename";

"action_title_markasfavorite" = "Mark as Favorite";

"action_title_markasunfavorite" = "Remove From Favorites";

"action_title_info" = "Info";

"action_title_filter" = "Filter by";

"action_title_sort" = "Sort by";

"action_title_selectall" = "Select All";

"action_title_clearselections" = "Clear selections";

"action_title_run" = "Run";

"action_title_print" = "Print";

"action_title_openIn" = "Open with...";

"action_title_accept" = "Accept";

"action_title_schedule" = "Schedule";

"action_title_share" = "Share";


/********** Application Info **********/

"application_info" = "%@™ %@\n\nManagement tool and report viewer for TIBCO JasperReports Server %.1f and greater.\n\nFor more information visit:\nhttp://community.jaspersoft.com/project/jaspermobile-ios\n\nCopyright © 2005-%zd TIBCO Software, Inc.";


/********** Buttons **********/

"dialog_button_applyUpdate" = "Apply";

"dialog_button_ok" = "OK";

"dialog_button_cancel" = "Cancel";

"dialog_button_continue" = "Continue";

"dialog_button_retry" = "Retry";

"dialog_button_run_report" = "Run Report";

"dialog_button_save" = "Save";

"dialog_button_delete" = "Delete";

"dialod_title_attention" = "Warning";

"dialod_title_error" = "Error";

"dialod_title_confirmation" = "Confirmation";


/********** Dashboard Viewer **********/

"dashboard_viewer_absent_input_controls_alert_message" = "Filters are absent";


/********** Error messages **********/

"error_readingresponse_dialog_msg" = "Failed to load data!";

"error_noconnection_dialog_title" = "Network is not available";

"error_noconnection_dialog_msg" = "Check your network settings (mobile data or wifi) and try again.";

"error_authenication_dialog_title" = "Invalid credentials supplied.";

"error_authenication_dialog_msg" = "Could not login to JasperReports Server.";

"error_unknownhost_dialog_title" = "Unknown server";

"error_unknownhost_dialog_msg" = "The specified hostname could not be found.";

"error_upgrade_data_title" = "Upgrade Error - User Data Update";

"error_upgrade_data_msg" = "There was an error updating user data (Servers, Favorites, Filter values & Settings) during the upgrade process. Press:\nRetry - to re-execute the data update again\nApply - to ignore the error and continue with upgrade, you may LOSE all user data\nCancel - to cancel the upgrade (this will leave you at the current version)";

"error_server_notsupported_title" = "Wrong server version or URL";

"error_server_notsupported_msg" = "The server version is not supported, or the URL is incorrect.";

"error_openIn_message" = "There is no application to open this resource.";


/********** External Screens **********/

"action_title_showExternalDisplay" = "Show on TV";

"action_title_hideExternalDisplay" = "Show on Device";

"external_screen_button_title_maximize" = "Tap to maximize";

"external_screen_button_title_manimize" = "Tap to minimize";


/********** HTTP error messages **********/

"error_http_400" = "400 - Bad Request. The request was invalid";

"error_http_403" = "403 - Permission Denied. The request is understood, but it has been refused";

"error_http_404" = "404 - Not Found. The URI requested is invalid or the resource requested does not exists";

"error_http_500" = "500 - Internal Server Error";

"error_http_502" = "502 - Bad Gateway";

"error_http_503" = "503 - Service Unavailable";

"error_http_504" = "504 - Gateway Timeout";


/********** Login Page **********/

"login_username_label" = "Username";

"login_username_errmsg_empty" = "Specify a valid username.";

"login_password_label" = "Password";

"login_password_errmsg_empty" = "Specify a valid password.";

"login_server_profile_errmsg_empty" = "Select a server profile.";

"login_button_login" = "Login";

"login_button_try_demo" = "Try Demo";


/********** Menu View **********/

"menuitem_library_label" = "Library";

"menuitem_recentviews_label" = "Recently Viewed";

"menuitem_saveditems_label" = "Saved Items";

"menuitem_settings_label" = "Settings";

"menuitem_schedules_label" = "Schedules";

"menuitem_about_label" = "About";

"menuitem_repository_label" = "Repository";

"menuitem_favorites_label" = "Favorites";

"menuitem_logout_label" = "Log Out";

"menuitem_feedback_label" = "Feedback by email";


/********** Onboarding Intro **********/

"intro_title" = "Welcome to\nTIBCO JasperMobile";

"intro_description" = "Swipe up to begin";

"intro_button_skip_skip" = "Skip Intro";

"intro_button_skip_startUsing" = "Start using TIBCO JasperMobile";

"intro_model_firstScreen_title" = "Stay Connected";

"intro_model_firstScreen_description" = "TIBCO JasperMobile keeps you connected to\nyour business wherever you are.";

"intro_model_secondScreen_title" = "Instant Access";

"intro_model_secondScreen_description" = "Get access to live interactive reports\ndriven from your operational applications.";

"intro_model_thirdScreen_title" = "Seemless Integration";

"intro_model_thirdScreen_description" = "View and interact with your TIBCO JasperReports\nServer v%_1f or greater environment.";


/********** Other **********/

"status_loading" = "Loading...";

"status_loading_ic" = "Loading...";

"back_button_title" = "Back";


/********** Report Saver view **********/

"report_viewer_save_title" = "Save Report";

"report_viewer_save_name" = "Report name";

"report_viewer_save_format" = "Output format";

"report_viewer_save_pages" = "Pages";

"report_viewer_save_pages_all" = "All";

"report_viewer_save_pages_range_fromPage" = "From page:";

"report_viewer_save_pages_range_toPage" = "To page:";

"report_viewer_save_saved" = "The report was saved successfully.";

"report_viewer_save_addedToQueue" = "The report is being saved.";

"report_viewer_save_name_errmsg_empty" = "This field is required.";

"report_viewer_save_name_errmsg_notunique" = "This name already exists, choose a unique name.";

"report_viewer_save_name_errmsg_notunique_rewrite" = "This name already exists, do you want to overwrite it?";

"report_viewer_save_name_errmsg_maxlength" = "Must be less than %i characters.";

"report_viewer_save_name_errmsg_characters" = "Characters %@ are not allowed.";

"report_viewer_save_saving_status_title" = "Saving report...";

"report_viewer_save_name_errmsg_tooBigRange" = "Can't save report of more than %@ pages in HTML format. Would you like to save it in PDF format?";


/********** Report viewer **********/

"report_viewer_error_title" = "Error while loading report.";

"report_viewer_visualize_render_error" = "Report rendering failed.";

"report_viewer_emptyreport_title" = "Report is empty.";

"report_viewer_emptyreport_message" = "Tap 'Ok' if you want to change filters, or tap 'Cancel' to return to the previous report.";

"report_viewer_pagecount" = "of %d";

"report_viewer_wrongNumberOfCurrentPage" = "The requested page is out of range (%@).";


/********** Report viewer Options view **********/

"report_viewer_options_title" = "Filters";

"report_viewer_options_singleselect_titlelabel_title" = "Select a single item";

"report_viewer_options_multiselect_titlelabel_title" = "Select one or more items";

"report_viewer_options_multiselect_available_title" = "Available";

"report_viewer_options_multiselect_selected_title" = "Selected";

"report_viewer_options_search_value_placeholder" = "Search Values";

"report_viewer_options_ic_title_date" = "Date";

"report_viewer_options_ic_title_time" = "Time";

"report_viewer_options_ic_title_unset" = "Unset";

"report_viewer_report_options_title" = "Saved Values";

"report_viewer_report_options_active_option_title" = "-- None --";

"report_viewer_report_options_new_option_title" = "Enter name of a new ReportOption";

"report_viewer_report_options_new_option_title_alreadyexist" = "This report already has saved values with this name. Do you want to overwrite them?";

"report_viewer_report_options_create_permission_error" = "You do not have permission to save this option for the report. Log in as a permitted user if you can.";

"report_viewer_report_options_remove_permission_error" = "You do not have permission to remove this option for the report. Log in as a permitted user if you can.";

"report_viewer_report_options_remove_confirmation_message" = "Do you really want to remove\n%@?";


/********** Repository view **********/

"repository_root_organization" = "Organization";

"repository_root_root" = "Root";

"repository_root_public" = "Public";


/********** Resource Info View  **********/

"resource_label_title" = "Name";

"resource_description_title" = "Description";

"resource_type_title" = "Type";

"resource_uri_title" = "URI";

"resource_version_title" = "Version";

"resource_creationDate_title" = "Creation Date";

"resource_modifiedDate_title" = "Modified Date";

"resource_format_title" = "Format";

"resources_type_reportUnit" = "Report";

"resources_type_dashboard" = "Dashboard";

"resources_type_dashboard_legacy" = "Legacy Dashboard";

"resources_type_folder" = "Folder";

"resources_type_saved_reportUnit" = "Content Resource";


/********** Resource viewer view **********/

"resource_viewer_open_link" = "Do you want to open link in external browser?";

"resource_viewer_can_not_open_link" = "Link can't be opened.";

"resource_viewer_print_operation_name" = "%@ print operation";

"resource_viewer_print_button_title" = "Print...";

"resource_viewer_print_preview_title" = "Preview";

"resource_viewer_print_prepare_title" = "Prepare...";

"resource_viewer_memory_warning" = "Sorry, Your device is low on memory...";


/********** Resource views **********/

"resources_loading_msg" = "Loading.\nPlease wait...";

"resources_noresults_msg" = "No Results.";

"resources_search_placeholder" = "Search resources";

"resources_noresults_saveditems_msg" = "No Saved Items.";

"resources_noresults_favorites_msg" = "No Favorited Items.";


/********** Resource views: Filter By **********/

"resources_filterby_title" = "Resource Type";

"resources_filterby_type_all" = "All";

"resources_filterby_type_reportUnit" = "Reports";

"resources_filterby_type_dashboard" = "Dashboards";

"resources_filterby_type_folder" = "Folders";

"resources_filterby_type_files" = "Content Resources";

"resources_filterby_type_saved_reportUnit" = "Saved Items";


/********** Resource views: Sort by **********/

"resources_sortby_title" = "Sort Options";

"resources_sortby_name" = "Name";

"resources_sortby_creationDate" = "Creation Date";

"resources_sortby_modifiedDate" = "Modified Date";

"resources_sortby_accessTime" = "Access Time";


/********** Saved Reports viewer view **********/

"savedreport_viewer_modify_title" = "Rename Report";

"savedreport_viewer_modify_reportname" = "Item name";

"savedreport_viewer_delete_confirmation_message" = "Do you really want to delete this item?";

"savedreport_viewer_show_resource_error_message" = "Report could not be loaded. Try to save a report with less count of pages.";

"savedreport_viewer_file_not_exists" = "File doesn't exists";

"savedreport_viewer_format_not_supported" = "Format not supported";


/********** Schedules **********/

"schedules_title" = "Schedules";

"schedules_no_jobs_message" = "No jobs are scheduled.";


/********** New Job **********/

"schedules_new_job_label" = "Name";

"schedules_new_job_description" = "Description";

"schedules_new_job_button_create" = "Create Schedule";

"schedules_new_job_output_file_name" = "Output File Name";

"schedules_new_job_output_file_path" = "Repository Output Folder";

"schedules_new_job_format" = "Format";

"schedules_new_job_start_date" = "Run once at:";

"schedules_new_job_start_immediately" = "Start immediately";

"schedules_new_job_output_format" = "Output Format";


/********** Schedule Errors **********/

"schedules_error_domain" = "Validation of a new schedule";

"schedules_error_empty_filename" = "Specify an output file name.";

"schedules_error_empty_filename_invalid_characters" = "The base output name contains invalid characters. You might have mistyped it.";

"schedules_error_empty_output_folder" = "Specify a folder.";

"schedules_error_empty_label" = "Specify a name for the scheduled job.";

"schedules_error_empty_format" = "Select output formats for the job.";

"schedules_error_date_past" = "The start date is in the past. It should be in the future.";

"schedules_error_duplicate_filename" = "There is a scheduled job of the same output file name. Please try different name.";

"schedules_error_output_folder_inexistent" = "The job output folder cannot be found. It might have been deleted or moved.";


/********** Security **********/

"secutiry_http_message" = "HTTP connections are not secure. You should specify HTTPS if your server supports it.";


/********** Server Profiles view **********/

"servers_profile_title" = "Server Profiles";

"servers_url_label" = "Server address";

"servers_url_errmsg" = "Specify a valid URL.";

"servers_name_label" = "Profile name";

"servers_name_errmsg_empty" = "Specify a valid profile name";

"servers_name_errmsg_exists" = "Profile name already exists. Specify a unique name.";

"servers_orgid_label" = "Organization ID";

"servers_askpassword_label" = "Always ask for password";

"servers_keepSession_label" = "Automatically extend the session";

"servers_title_new" = "New Server Profile";

"servers_action_profile_edit" = "Edit";

"servers_action_profile_clone" = "Clone Profile";

"servers_action_profile_delete" = "Delete";

"servers_profile_delete_message" = "Confirm to delete this server profile.";

"servers_profile_list_empty" = "There are no Server Profiles";


/********** Settings view **********/

"settings_title" = "Settings";

"settings_item_connection_timeout" = "Connection timeout (in seconds)";

"settings_item_server" = "Server";

"settings_item_intro" = "Show intro";

"settings_crashtracking_title" = "Send crash reports";

"settings_crashtracking_alert_title" = "Note";

"settings_crashtracking_alert_message" = "Restart the app after changing this setting.";

"settings_privacy_policy_title" = "Privacy Policy";

"settings_feedback" = "Feedback by email";

"settings_feedback_errorShowClient" = "An email address is required.";

"settings_save_message" = "Saving Settings...";
