...
    
	[super viewDidLoad];	
}

-(void)editClicked:(id)sender {
	
	editDoneButton.title = @"Done";
	editDoneButton.action = @selector(doneClicked:);
	editMode = true;
	
	
	[[self tableView] beginUpdates];
	[[self tableView] reloadSections: [NSIndexSet indexSetWithIndex:0] withRowAnimation:UITableViewRowAnimationNone];
...
